--- a/employee/templates/show.html
+++ b/employee/templates/show.html
@@ -11,7 +11,7 @@
     <thead class="thead-dark">  
     <tr>  
         <th>Employee ID</th>  
-        <th>Employee Name</th>  
+        <th>Employee Naaaame</th>  
         <th>Employee Email</th>  
         <th>Employee Contact</th>  
         <th>Actions</th>  
